--- a/website component - about me/amout me.html
+++ b/website component - about me/amout me.html
@@ -27,7 +27,7 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
-<div class="container-fluid ">
+<div class="container ">
 <!-- <div class="col-md-3 col-sm-4"> -->
   <div class="circle">
     <h2>About me</h2>
@@ -37,8 +37,10 @@
     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat </p>
   </div>
+  <div>
+    <img src="image/girl.svg">
+  </div>
   
-  <img src="image/girl.svg">
 </div> 
 </div>
 
